<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/cl_layout_building_activity"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:iss_auto_cycle="true"
        app:iss_period="10000"
        app:iss_delay="0"
        tools:listitem="@layout/item_image"/>

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black_000000"
        android:textSize="@dimen/text_med"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSlider"
        tools:text="R$ 1000000" />

    <TextView
        android:id="@+id/tvModalidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/imovel_tipo_aluguel"
        android:textColor="@color/black_000000"
        android:textSize="@dimen/text_med"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvValor" />

    <TextView
        android:id="@+id/tvNumQuartos"
        tools:text="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_9"
        app:layout_constraintTop_toBottomOf="@+id/tvModalidade"
        app:layout_constraintStart_toStartOf="@+id/tvModalidade"/>

    <TextView
        android:id="@+id/tvQuartos"
        android:text="@string/quartos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_9"
        app:layout_constraintTop_toTopOf="@+id/tvNumQuartos"
        app:layout_constraintStart_toEndOf="@+id/tvNumQuartos"/>

    <TextView
        android:id="@+id/tvNumBanheiros"
        tools:text="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_17"
        app:layout_constraintTop_toTopOf="@+id/tvNumQuartos"
        app:layout_constraintStart_toEndOf="@+id/tvQuartos"/>

    <TextView
        android:id="@+id/tvBanheiros"
        android:text="@string/banheiros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_9"
        app:layout_constraintTop_toTopOf="@+id/tvNumQuartos"
        app:layout_constraintStart_toEndOf="@+id/tvNumBanheiros"/>

    <TextView
        android:id="@+id/tvNumMetros"
        tools:text="70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvNumQuartos"
        app:layout_constraintStart_toStartOf="@+id/tvNumQuartos"/>

    <TextView
        android:id="@+id/tvMetros"
        android:text="@string/metros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_9"
        app:layout_constraintTop_toBottomOf="@+id/tvNumQuartos"
        app:layout_constraintStart_toEndOf="@+id/tvNumMetros"/>

    <TextView
        android:id="@+id/tvNumVagas"
        tools:text="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvNumQuartos"
        app:layout_constraintStart_toStartOf="@+id/tvNumBanheiros"/>

    <TextView
        android:id="@+id/tvVagas"
        android:text="@string/vagas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_9"
        app:layout_constraintTop_toBottomOf="@+id/tvNumQuartos"
        app:layout_constraintStart_toEndOf="@+id/tvNumVagas"/>


</androidx.constraintlayout.widget.ConstraintLayout>
