<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/cvImovel"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="1dp"
    app:cardCornerRadius="7dp"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clImovel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/ivImovel"
            android:layout_width="109dp"
            android:layout_height="115dp"
            android:layout_marginStart="5dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvModalidadeImovel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/margin_25"
            android:text="@string/imovel_tipo_aluguel"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/ivImovel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNumValorImovel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivImovel"
            app:layout_constraintTop_toBottomOf="@+id/tvModalidadeImovel"
            tools:text="R$ 1000000" />

        <TextView
            android:id="@+id/tvNumQuartosImovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/ivImovel"

            app:layout_constraintTop_toBottomOf="@+id/tvNumValorImovel"
            tools:text="4" />

        <TextView
            android:id="@+id/tvQuartosImovel"
            android:text="@string/quartos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_9"
            app:layout_constraintTop_toTopOf="@+id/tvNumQuartosImovel"
            app:layout_constraintStart_toEndOf="@+id/tvNumQuartosImovel"/>

        <TextView
            android:id="@+id/tvNumBanheirosImovel"
            tools:text="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_17"
            app:layout_constraintTop_toTopOf="@+id/tvNumQuartosImovel"
            app:layout_constraintStart_toEndOf="@+id/tvQuartosImovel"/>

        <TextView
            android:id="@+id/tvBanheirosImovel"
            android:text="@string/banheiros"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_9"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNumQuartosImovel"
            app:layout_constraintStart_toEndOf="@+id/tvNumBanheirosImovel"/>

        <TextView
            android:id="@+id/tvNumMetrosImovel"
            tools:text="70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvNumQuartosImovel"
            app:layout_constraintStart_toStartOf="@+id/tvNumQuartosImovel"/>

        <TextView
            android:id="@+id/tvMetrosImovel"
            android:text="@string/metros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_9"
            app:layout_constraintTop_toBottomOf="@+id/tvNumQuartosImovel"
            app:layout_constraintStart_toEndOf="@+id/tvNumMetrosImovel"/>

        <TextView
            android:id="@+id/tvNumVagasImovel"
            tools:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvBanheirosImovel"
            app:layout_constraintStart_toStartOf="@+id/tvNumBanheirosImovel"/>

        <TextView
            android:id="@+id/tvVagasImovel"
            android:text="@string/vagas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_9"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBanheirosImovel"
            app:layout_constraintStart_toEndOf="@+id/tvNumVagasImovel"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>